--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,3 +1,4 @@
+<div class ="posties">
 <%= form_for @post do |f| %>
     <div>
         <%= f.label :title %>
@@ -10,4 +11,5 @@
     <div>
         <%= f.submit %>
     </div>
+  </div>
 <% end %>
