--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,6 +9,8 @@
         <p class="post-content"><%= post.content %></p>
 
       <%= link_to "edit", edit_post_path(post) %>
+      <%= link_to "delete", post, method: :delete, data: {confirm: "Are you sure you want to delete this post"} %>
+
       <% end %>
     </div>
   </div>
