--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,4 @@
+
 <h1>Post Blogs</h1>
 
 <section id="blog-content">
@@ -5,7 +6,7 @@
     <div id="posts-blogroll" class="blogroll">
       <%= link_to "Create A Post", new_post_path %>
       <% @posts.each do |post| %>
-        <h3><a class="post-link" href="/post/<%= post.id %>"><%= post.title %></a></h3>
+        <h3><a class="post-link" href="/posts/<%= post.id %>"><%= post.title %></a></h3>
         <p class="post-content"><%= post.content %></p>
 
       <%= link_to "edit", edit_post_path(post) %>
