--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,10 @@
   <div class="section">
-    <h1 class="title">
+    <h1>
       <%= @post.title %>
     </h1>
     <div class="content">
-      <%= @post.content %>
+      <h2><%= @post.content %>
+      </h2>
     </div>
+    <%= link_to "Cancel", root_path %>
   </div>
