--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,16 +1,3 @@
-<div class ="posties">
-<%= form_for @post do |f| %>
-    <div>
-        <%= f.label :title %>
-        <%= f.text_field :title %>
-    </div>
-    <div>
-        <%= f.label :content %>
-        <%= f.text_field :content %>
-    </div>
-    <div>
-        <%= f.submit %>
-    </div>
-    <%= link_to "Cancel", root_path %>
-  </div>
-<% end %>
+<h1>Create a Post</h1>
+
+<%= render 'form' %>
