--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,9 +8,11 @@
       <% @posts.each do |post| %>
         <h3><a class="post-link" href="/posts/<%= post.id %>"><%= post.title %></a></h3>
         <p class="post-content"><%= post.content %></p>
+      <div class="comments">
 
-      <%= link_to "edit", edit_post_path(post) %>
-      <%= link_to "delete", post, method: :delete, data: {confirm: "Are you sure you want to delete this post"} %>
+      </div>
+      <!-- <%= link_to "edit", edit_post_path(post) %>
+      <%= link_to "delete", post, method: :delete, data: {confirm: "Are you sure you want to delete this post"} %> -->
 
       <% end %>
     </div>
