--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,19 +1,3 @@
 <h1>Create a new post</h1>
 
-<div class="section">
-
-<%= form_for @post do |f| %>
-    <div>
-        <%= f.label :title %>
-        <%= f.text_field :title %>
-    </div>
-    <div>
-        <%= f.label :content %>
-        <%= f.text_area :content %>
-    </div>
-    <div>
-        <%= f.submit  %>
-    </div>
-    <%= link_to "Cancel", root_path %>
-</div>
-<% end %>
+<%= render 'form' %>
