--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,5 +6,11 @@
       <h2><%= @post.content %>
       </h2>
     </div>
+    <%=link_to "Edit", edit_post_path(@post) %>
+    <%= link_to "delete", post_path(@post), method: :delete, data: {confirm: "Are you sure you want to delete this post"} %>
     <%= link_to "Cancel", root_path %>
   </div>
+
+<section class="comments">
+
+</section>
