--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,5 +12,13 @@
   </div>
 
 <section class="comments">
-
+<div class="container">
+  <h2 class=""><%= @post.comments.count %> Comments</h2>
+  <%= render @post.comments %>
+  <div class="comment-form">
+    <hr />
+  <h3 class="subtitle">Leave a reply</h3>
+  <%= render 'comments/form' %>
+  </div>
+</div>
 </section>
