styled navbar and body

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 
-<h1>Post Blogs</h1>
+<h1>Kob's Z0ne</h1>
 
 <section id="blog-content">
   <div class="container">
@@ -10,7 +10,7 @@
         <p class="post-content"><%= post.content %></p>
         <hr />
       <div class="comments">
-      
+
       </div>
       <!-- <%= link_to "edit", edit_post_path(post) %>
       <%= link_to "delete", post, method: :delete, data: {confirm: "Are you sure you want to delete this post"} %> -->
