--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+
+body{
+  background-color:lightsalmon;
+}
+
+.navbar{
+  background-color: lavender;
+}
