--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,23 @@
       <div class="">
         <%= link_to "Create New Post", new_post_path, class: "navbar-item" %>
       </div>
+      <div class="signOut">
+        <%= link_to 'sign-out', destroy_user_session_path, method: :delete %>
+      </div>
+      <ul>
+              <li><a href="/">Home</a></li>
+              <% if current_user %>
+                <% # Logged In %>
+                <li class="logged-in"><a href="/user/<%= @current_user.id if @current_user %>">Profile</a></li>
+                <li class="logged-in"><a href="/users">Users</a></li>
+                <li class="logged-in"><a href="/logout">Logout</a></li>
+              <% else %>
+                <% # Logged Out %>
+                <li class="logged-out"><a href="users/sign_up">Signup</a></li>
+                <li class="logged-out"><a href="users/sign_in">Login</a></li>
+                <li class="logged-out"><a href="/">The Room</a></li>
+              <% end%>
+            </ul>
     </nav>
     <%= yield %>
   </body>
