--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,6 +6,7 @@
     <div id="posts-blogroll" class="blogroll">
       <%= link_to "Create A Post", new_post_path %>
       <% @posts.each do |post| %>
+      <h2><%= post.user.email %></h2>
         <h3><a class="post-link" href="/posts/<%= post.id %>"><%= post.title %></a></h3>
         <p class="post-content"><%= post.content %></p>
         <hr />
