--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,17 @@
   <div class="section">
     <h1>
+      <%= @post.user.email %>
       <%= @post.title %>
     </h1>
     <div class="content">
       <h2><%= @post.content %>
       </h2>
     </div>
+    <% if current_user && @post.user_id == current_user.id %>
     <%=link_to "Edit", edit_post_path(@post) %>
     <%= link_to "delete", post_path(@post), method: :delete, data: {confirm: "Are you sure you want to delete this post"} %>
     <%= link_to "Cancel", root_path %>
+    <% end %>
   </div>
 
 <section class="comments">
@@ -17,8 +20,10 @@
   <%= render @post.comments %>
   <div class="comment-form">
     <hr />
+    <% if current_user %>
   <h3 class="subtitle">Leave a reply</h3>
   <%= render 'comments/form' %>
+  <% end %>
   </div>
 </div>
 </section>
