--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -7,7 +7,9 @@
 
       </p>
     </div>
-    <%= link_to 'Delete', [comment.post, comment], method: :delete, data: {confirm: "Are you sure?" } %>
+    <% if current_user && comment.user_id == current_user.id %>
+      <%= link_to 'Delete', [comment.post, comment], method: :delete, data: {confirm: "Are you sure?" } %>
+    <% end %>
     <hr />
   </p>
 </div>
